Fix minor issues.